# symmetrical-sniffle

./: .gitattributes  .gitignore  DESKTOP_PACKAGING_GUIDE.md  README.md  build-account-importer-extension.ps1  build-desktop-to-desktop.ps1  build-desktop.ps1  build-desktop.sh  build-updater-artifacts.ps1  package-lock.json  package.json  数据库与API连接说明.md
backend/: .env.example  App.tsx  PHASE_1_PROGRESS.md  PROXY_MODULE_CHECK.md  README_COMMERCIALIZATION.md  STATELESS_PROTOCOL_GATEWAY.md  TROUBLESHOOTING.md  UPDATE_LOG.md  ecosystem.config.cjs  ecosystem.config.cjs.example  main.tsx  package-lock.json  package.json  tsconfig.json
backend/docs/: CLOSING_CHECKLIST.md  DATABASE_FIELDS_REFERENCE.md
backend/scripts/: add_tenant_support.cjs  analyze-audit-log.cjs  bind-proxies-to-accounts.mjs  check-tasks.cjs  check_accounts.js  check_api.cjs  check_chat_route.cjs  check_dashboard.cjs  check_db_and_api.ts  (+49 more)
docs/: CURRENT_STATUS.md  DEPLOY-RUNBOOK.md  DEPLOYMENT.md  NEXT_SESSION_BRIEF.md  前端静态文件与调试器说明.md  域名通但无UI排查.md  工作日记-2026-03-19.md  工作日记-2026-03-20.md  部署清单.md
frontend/: .env.development  .env.development.local.example  .env.production  .env.production.example  .env.production.local.example  index.html  nginx.conf  package.json  vite.config.ts
scripts/: check-server-permissions.sh  clean-server.sh  clean.js  deploy-backend.ps1  deploy-frontend.ps1  deploy-frontend.sh  package-local-import-tool.ps1  test-connection.ps1  write-handoff.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_round_theme_icon.py  icon.icns
src-tauri/src/: main.rs
(+168 files in other folders)
